fixed header a bit using grid and different text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 body {
     background: #eaeaea
 }
@@ -6,16 +6,13 @@ body {
 .header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 100px;
+    grid-template-rows: 300px;
 }
 
 .covered{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     grid-column: 1/3;
     grid-row: 1/6;
-
+    text-align: center;
 }
 
 .learn{
@@ -28,23 +25,30 @@ body {
 }
 
 .family {
-    height: 60px;
-    width: 60px;
-    justify-self: end;
-}
-=======
-header{
-    max-width: 1000px;
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: 300px 150px 150px;
-    grid-template-areas: "covered covered" 
-                           "learn join"; 
+    height: 280px;
+    width: 300px;
+    float: right;
+
 }
 
-.covered{
-    background: skyblue;
-    grid-area: covered;
+p{
+    padding-left: 70px;
+    padding-right: 80px;
+letter-spacing: 2px;
+
 }
 
->>>>>>> a559766c4caf9a09a548b48d4aa27bf5a4f957fa
+h1 {
+    padding-left: 70px;
+    padding-right: 80px;
+    font-size: 40px;
+    text-align: left;
+}
+
+button{
+    background: #ffffff;
+    padding: 12px 28px;
+    border-radius: 12px;
+    padding-left: 70px;
+    padding-right: 80px;
+}
